# flame

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  compose.yaml
.github/workflows/: code-verify.yaml  e2e-bm.yaml  e2e-k8s.yaml  e2e-system.yaml  release-publish.yaml
charts/flame/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
ci/: flame-cluster-benchmark.yaml  flame.yaml
ci/k8s/: e2e.sh
ci/release/: check-image-platforms.py  sanity.sh
common/: Cargo.toml
common/src/: ctx.rs  lib.rs  pprof.rs  python.rs
cri/: Cargo.toml  build.rs
cri/tests/: integration_test.rs
docker/: Dockerfile.console  Dockerfile.fem
docs/: release-process.md
docs/api/: backend.md  frontend.md  index.md  shim.md  types.md
docs/releases/: v0.6.0.md
docs/sdk/: python.md
docs/tutorials/: local-development.md  runner-setup.md
e2e/: pyproject.toml
e2e/tests/: test_agent.py  test_batch.py  test_cache.py  test_core.py  test_failure_recovery.py  test_flmexec.py  test_flmrun.py  test_runner.py  test_session.py  test_shim_selection.py  test_system.py
examples/candle/based/: Cargo.toml  README.md  candle-based-example.yaml
examples/candle/based/src/: api.rs  client.rs  service.rs
examples/crawler/: crawler.py  pyproject.toml
examples/pi/rust/: Cargo.toml  README.md
examples/pi/rust/src/: api.rs  client.rs  service.rs
examples/ps/: pyproject.toml
examples/vllm/: pyproject.toml
executor_manager/: Cargo.toml
flmadm/: README.md
flmadm/src/: main.rs  (+1 more)
flmctl/: Cargo.toml
flmexec/: Cargo.toml
flmping/: Cargo.toml
object_cache/: Cargo.toml
rpc/: Cargo.toml  build.rs
session_manager/: Cargo.toml
stdng/: Cargo.toml
tasks/: lessons.md  todo.md
(+163 files in other folders)
