[package]
name = "stdng"
version = "0.1.8"
edition = "2024"
description = "An enhancement for Rust standard library"
repository = "https://github.com/xflops/flame"
license = "Apache-2.0"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
