[package]
name = "pi"
version = "0.2.0"
edition = "2021"

[dependencies]
flame-rs = { path = "../../../sdk/rust", features = ["macros"] }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "pi-service"
path = "src/service.rs"

[[bin]]
name = "pi"
path = "src/client.rs"
